# creditsuisse

./: CMakeLists.txt  README.md
lib/include/: types.h
lib/include/engine/: default_engine_event_handler.h  matching_engine.h
lib/include/events/: client_events.h  client_order_request.h
lib/include/interface/: i_engine_event_observer.h  i_matching_algo.h  i_matching_engine.h  i_validator.hpp
lib/include/matching/: matching_algo.hpp  passive_order.h  passive_order_book.hpp
lib/include/matching/validators/: cancel_request_validators.hpp  matching_validators.hpp  new_order_request_validators.hpp  validators.hpp
lib/src/: include.cpp
lib/src/engine/: default_engine_event_handler.cpp
test/: CMakeLists.txt  me_lib_boost_test.cpp
test/engine/: default_engine_event_handler_test.cpp  matching_engine_test.cpp
test/include/: test_helper.h
test/matching/: matching_algo_cancel_test.cpp  matching_algo_insert_match_test.cpp  matching_algo_insert_response_test.cpp  matching_algo_min_exec_qty_validators_test.cpp  matching_algo_new_insert_validators_test.cpp  passive_order_book_test.cpp  test_helper.cpp
test/matching/validators/: cancel_request_validators_test.cpp  matching_validators_test.cpp  new_order_request_validators_test.cpp  validators_test.cpp
